Expose todo entry APIs #1
